tests/snapshots/snapshots__command_palette_filtered.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Worktrees ━━━━━━━━━━━━┓┏ Claude Code ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃▶ 1 ○ my-project [main]┃┃  Press Enter on a worktree to start a Claude Code session               ┃
┃  2 ○ my-project [featu┃┃                                                                         ┃
┃  3 ○ my-project [f┏ Command Palette ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓                   ┃
┃                   ┃> git█                                                    ┃                   ┃
┃                   ┃View: Git Status                                    Ctrl+6┃                   ┃
┃                   ┃View: Git Blame                                     Ctrl+7┃                   ┃
┃                   ┃View: Git Log                                       Ctrl+8┃                   ┃
┃                   ┃Refresh Git Status                                        ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛                   ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] worktrees                                        main
