tests/snapshots/snapshots__diff_view_with_changes.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Worktrees ━━━━━━━━━━━━┓┏ Diff: src/app.rs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃│ ▼ my-project         ┃┃diff --git a/src/app.rs b/src/app.rs                                     ┃
┃    1 ▶ ○ my-project [m┃┃@@ -1,3 +1,4 @@                                                          ┃
┃    2 ▶ ○ my-project-fe┃┃ use std::collections::HashMap;                                          ┃
┃    3 ▶ ○ my-project-fe┃┃+use std::process::Command;                                              ┃
┃                       ┃┃ use crossterm::event::KeyCode;                                          ┃
┃                       ┃┃-use old_crate::Something;                                               ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┃                                                                         ┃
┏ Notes ━━━━━━━━━━━━━━━━┓┃                                                                         ┃
┃  select a worktree    ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] diff
