tests/snapshots/snapshots__file_explorer_with_git_indicators.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ my-project ━━━━━━━━━━━┓┏ Claude Code ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃▶ ▾ src ●              ┃┃  Press Enter on a worktree to start a Claude Code session               ┃
┃      app.rs M         ┃┃                                                                         ┃
┃      main.rs A        ┃┃                                                                         ┃
┃    README.md ?        ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] files                                          main
