tests/snapshots/snapshots__git_blame_view.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Worktrees ━━━━━━━━━━━━┓┏ Blame: src/main.rs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃│ ▼ my-project         ┃┃abc12345 Alice        2 days ago      1 use std::io;                     ┃
┃    1 ▶ ○ my-project [m┃┃def67890 Bob          3 months ago    2 fn main() {                      ┃
┃    2 ▶ ○ my-project-fe┃┃def67890 Bob          3 months ago    3     println!("hello");           ┃
┃    3 ▶ ○ my-project-fe┃┃abc12345 Alice        2 days ago      4 }                                ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┃                                                                         ┃
┏ Notes ━━━━━━━━━━━━━━━━┓┃                                                                         ┃
┃  select a worktree    ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] blame
