tests/snapshots/snapshots__git_log_with_file_filter.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Worktrees ━━━━━━━━━━━━┓┏ Git Log — src/parser.rs (1 commits) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃│ ▼ my-project         ┃┃abc1234 Fix parser bug  Alice 1 hour ago                                 ┃
┃    1 ▶ ○ my-project [m┃┃                                                                         ┃
┃    2 ▶ ○ my-project-fe┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┃                                                                         ┃
┏ Notes ━━━━━━━━━━━━━━━━┓┃                                                                         ┃
┃  select a worktree    ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] log
