tests/snapshots/snapshots__help_overlay_diff_view.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Worktrees ━━━━━━━━━━━━┓┏ Diff ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃│ ▼ my-project         ┃┃  Select a file from Git Status to view diff                             ┃
┃    1 ▶ ○ my-project [m┃┃                                                                         ┃
┃    2 ▶ ○ my-project-fe┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                   ┏ Help (? to close) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓                   ┃
┃                   ┃ Navigation — Diff View                                   ┃                   ┃
┃                   ┃ ─────────────────────────────────────                    ┃                   ┃
┃                   ┃ Cmd+1: Worktrees  Cmd+2: Terminal  Cmd+3: Files  Cmd+4: E┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃ j/k, ↑/↓    Scroll line                                  ┃                   ┃
┃                   ┃ PgUp/PgDn   Scroll page                                  ┃                   ┃
┃                   ┃ Esc         Back to terminal                             ┃                   ┃
┃                   ┃ 1-9, 0      Jump to worktree                             ┃                   ┃
┃                   ┃ Tab         Switch panel                                 ┃                   ┃
┃                   ┃ Cmd+P       Fuzzy file finder                            ┃                   ┃
┃                   ┃ Cmd+F       Project search                               ┃                   ┃
┃                   ┃ q           Quit                                         ┃                   ┃
┃                   ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛                   ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] diff
